--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,10 @@
-aggdraw==1.3.9
-altgraph==0.16.1
-autobahn==19.1.1
-backcall==0.1.0
-
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.2
-colorama==0.4.1
-cycler==0.10.0
-DAWG-Python==0.7.2
-decorator==4.3.2
-defusedxml==0.5.0
-docopt==0.6.2
-docx==0.2.4
-drawnow==0.72.0
-entrypoints==0.3
 Flask==1.1.1
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
-future==0.18.0
-hyperopt==0.2.2
-idna==2.8
-imutils==0.5.2
-ipykernel==4.10.0
-ipython==7.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-iso8601==0.1.12
-itsdangerous==1.1.0
-jedi==0.13.2
 Jinja2==2.11.1
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
 lxml==4.3.3
-MarkupSafe==1.1.0
-matplotlib==3.1.0
-mistune==0.8.4
-nbconvert==5.4.0
-nbformat==4.4.0
-networkx==2.2
-pandocfilters==1.4.2
-parso==0.3.3
-pefile==2019.4.18
-pickleshare==0.7.5
-prometheus-client==0.5.0
-prompt-toolkit==2.0.8
-Pygments==2.3.1
-python-dateutil==2.8.0
-python-docx==0.8.10
-python-dotenv==0.10.3
-python-mnist==0.6
-pytz==2019.2
-pywin32-ctypes==0.2.0
-pywinpty==0.5.5
-PyYAML==5.1.2
-pyzmq==17.1.2
-qtconsole==4.4.3
 requests==2.22.0
-schedule==0.6.0
-Send2Trash==1.5.0
-six==1.12.0
-terminado==0.8.1
-testpath==0.4.2
-tornado==5.1.1
-tqdm==4.41.0
-traitlets==4.3.2
-txaio==18.8.1
-urllib3==1.25.8
-vpnotebook==0.1.3
-vpython==7.4.7
-wcwidth==0.1.7
-webencodings==0.5.1
+SQLAlchemy==1.3.15
 Werkzeug==1.0.0
 WTForms==2.2.1
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-Flask==1.1.1
-Flask-Login==0.5.0
-Flask-WTF==0.14.3
-idna==2.8
-itsdangerous==1.1.0
-requests==2.22.0
-schedule==0.6.0
-six==1.12.0
-Werkzeug==1.0.0
-WTForms==2.2.1
+
