--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,38 @@
+alembic==1.4.1
+aniso8601==8.0.0
+appdirs==1.4.3
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+docutils==0.15.2
 Flask==1.1.1
 Flask-Login==0.5.0
+flask-ngrok==0.0.25
+Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
-Jinja2==2.11.1
-lxml==4.3.3
+idna==2.8
+importlib-metadata==0.23
+itsdangerous==1.1.0
+lxml==4.3.2
+Mako==1.1.2
+MarkupSafe==1.1.1
+more-itertools==7.2.0
+numpy==1.16.2
+pep517==0.7.0
+Pygments==2.4.2
+
+pytoml==0.1.21
+pytz==2019.3
 requests==2.22.0
-SQLAlchemy==1.3.15
+schedule==0.6.0
+shiboken2==5.13.0
+sip==4.19.8
+six==1.12.0
+SQLAlchemy==1.3.13
+SQLAlchemy-serializer==1.3.4.2
+toml==0.10.0
+urllib3==1.25.3
+
 Werkzeug==1.0.0
 WTForms==2.2.1
-
