added authors.html and genres.html

--- a/settings.ini
+++ b/settings.ini
@@ -12,4 +12,5 @@ registration_statuses = {"SUCCESS": "Успешная регистрация", "
 login_request_structure = {"user": {"login": "", "password_hash": ""}}
 login_statuses = {"SUCCESS": "Успешная аутентификации", "INVALID_PASSWORD": "Неправильный пароль", "UNKNOWN_LOGIN": "Неизвестный логин",
  "MISSING_LOGIN": "Не передан логин", "MISSING_PASSWORD_HASH": "Не передан хэш пароля", "MISSING_ARGUMENTS": "Не передан объект user"}
-
+[Constant]
+page_amount_books = 20
