create cart, update cart.html

--- a/settings.ini
+++ b/settings.ini
@@ -14,3 +14,8 @@ login_statuses = {"SUCCESS": "Успешная аутентификации", "I
  "MISSING_LOGIN": "Не передан логин", "MISSING_PASSWORD_HASH": "Не передан хэш пароля", "MISSING_ARGUMENTS": "Не передан объект user"}
 [Constant]
 page_amount_books = 20
+[Adding]
+adding_book_request_structure = {"book": {"name": "", "author": "", "barcode": "", "image_url": "", "icon_url": "", "quantity": "", "description": "", "genre": ""}}
+adding_book_statuses = {"SUCCESS": "Книга добавлена", "INVALID_BARCODE": "Неправильный формат штрих-кода", "BARCODE_REPLAY": "Штрих-код уже есть в базе",
+ "MISSING_NAME": "Не передано имя", "MISSING_AUTHOR": "Не передан автор", "MISSING_BARCODE": "Не передан штрих-код", "MISSING_QUANTITY": "Не передано количество"}
+
