--- a/settings.ini
+++ b/settings.ini
@@ -13,7 +13,8 @@ login_request_structure = {"user": {"login": "", "password_hash": ""}}
 login_statuses = {"SUCCESS": "Успешная аутентификации", "INVALID_PASSWORD": "Неправильный пароль", "UNKNOWN_LOGIN": "Неизвестный логин",
  "MISSING_LOGIN": "Не передан логин", "MISSING_PASSWORD_HASH": "Не передан хэш пароля", "MISSING_ARGUMENTS": "Не передан объект user"}
 [Constant]
-page_amount_books = 40
+amount_genres_index = 3
+page_amount_books = 30
 [Adding]
 adding_book_request_structure = {"book": {"name": "", "author": "", "barcode": "", "image_url": "", "icon_url": "", "quantity": "", "description": "", "genre": ""}}
 adding_book_statuses = {"SUCCESS": "Книга добавлена", "INVALID_BARCODE": "Неправильный формат штрих-кода", "BARCODE_REPLAY": "Штрих-код уже есть в базе",
