update sliders and book.html

--- a/settings.ini
+++ b/settings.ini
@@ -14,6 +14,7 @@ login_statuses = {"SUCCESS": "Успешная аутентификации", "I
  "MISSING_LOGIN": "Не передан логин", "MISSING_PASSWORD_HASH": "Не передан хэш пароля", "MISSING_ARGUMENTS": "Не передан объект user"}
 [Constant]
 amount_genres_index = 3
+amount_books_slider = 15
 page_amount_books = 30
 [Adding]
 adding_book_request_structure = {"book": {"name": "", "author": "", "barcode": "", "image_url": "", "icon_url": "", "quantity": "", "description": "", "genre": ""}}
