--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,8 @@
 [CSRF]
 secret_key=yandexlyceum_secret_key
+[APP]
+max_bytes=51200
+upload_folder=uploads
 [API]
 url_api = http://bookerapi.herokuapp.com/
 [Registration]
